--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,21 @@
 			<version>1.2</version>
 		</dependency>
 	
+	
+		<!-- Neo4J -->
+		  <dependency>
+		    <groupId>org.neo4j.app</groupId>
+		    <artifactId>neo4j-server</artifactId>
+		    <version>1.8.2</version>
+		  </dependency>
+		  <dependency>
+		    <groupId>org.neo4j.app</groupId>
+		    <artifactId>neo4j-server</artifactId>
+		    <classifier>static-web</classifier>
+		    <version>1.8.2</version>
+		  </dependency>
+		
+	
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
