Modified to add new props

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,1 +1,7 @@
 server.location=/Users/manalesl/source/temp/neo
+
+kids.name=Lara,Keith,Kirk,Darth,Biden,Bill,Jack,Mills,Linda,Heather,Zis,Nayak,Kumar,Ivan,Richard,Tahira,Noku,Ji,Huang,Bakr,deWillier,Kennedy
+kids.music=guiter,keyboard,violin,drums
+kids.sport=tennis,cricket,football,baseball,swimming
+kids.movies=Tinkerbell,X-Men,Superman,Spiderman,Brave
+kids.visted=China,Ireland,USA,Germany,India,Kenya,Dubai,Russia,Scotland
